clusters/apps/env/production/media/navidrome/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: navidrome
  annotations:
    kubernetes.io/ingress.class: "traefik-external"
    external-dns.alpha.kubernetes.io/target: ${DYNAMIC_DOMAIN}
    external-dns/public: "true"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "Host(`music.${SECRET_DOMAIN}`)"
      middlewares:
        - name: l5d-navidrome-middleware
          namespace: network-system
      services:
        - name: navidrome
          port: 4533
  tls:
    secretName: crj-wildcard-certificate
    domains:
      - main: music.${SECRET_DOMAIN}
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: l5d-navidrome-middleware
spec:
  headers:
    customRequestHeaders:
      l5d-dst-override: "navidrome.media.svc.cluster.local:4533"
