clusters/apps/env/production/media/navidrome/virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: navidrome
spec:
  hosts:
    - 'music.${SECRET_DOMAIN}'
  gateways:
    - istio-system/istio-ingressgateway
  http:
    - route:
        - destination:
            port:
              number: 4533
            host: navidrome.media.svc.cluster.local
          weight: 100
